compiler/testData/diagnostics/tests/resolve/noCandidates/kt2787.fir.kt
interface MutableMatrix<T> {
}

fun <T> toMutableMatrix(): MutableMatrix<T> {
    return <!INTERFACE_AS_FUNCTION!>MutableMatrix<!><T>()
}
